--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ html {
 
 h1{
     color: rgb(223, 237, 249);
-    margin: 15px 10px 300px 100px;
 
 }
 
@@ -14,16 +13,23 @@ input {
 }
 
 body {
-    align-items: center;
+    
     
 }
 
 .box {
-    display: flex;
-    align-items: center;
     background-color: rgb(58, 66, 66);
     width: 400px;
     height: 600px;
     margin: auto;
     border-radius: 12px;
 }
+
+.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+}
+
